# serializer version: 1
# name: TestDolphinTriforceGenerator.test_generate
  tuple(
    list([
      'dolphin-triforce',
      '-b',
      '-u',
      '/userdata/system/configs/dolphin-triforce',
      '-e',
      '/userdata/roms/triforce/rom.gcm',
    ]),
    dict({
      'QT_QPA_PLATFORM': 'xcb',
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestDolphinTriforceGenerator.test_generate[config]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate[gcpadnew]
  '''
  [GCPad1]
  Device = SDL/0/Generic Xbox pad
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  D-Pad/Down = `Hat 0 S`
  Buttons/Hotkey = `Button 8`
  Main Stick/Left = `Axis 0-`
  Main Stick/Right = `Axis 0+`
  Main Stick/Up = `Axis 1-`
  Main Stick/Down = `Axis 1+`
  C-Stick/Left = `Axis 2-`
  C-Stick/Right = `Axis 2+`
  C-Stick/Up = `Axis 3-`
  C-Stick/Down = `Axis 3+`
  Triggers/L = `Button 6`
  D-Pad/Left = `Hat 0 W`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R = `Button 7`
  D-Pad/Right = `Hat 0 E`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Hat 0 N`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate[gfx]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate[hotkeys]
  '''
  [Hotkeys1]
  Device = SDL/0/Generic Xbox pad
  Keys/Reset = `Button 8` & `Button 0`
  Keys/Toggle Pause = `Button 8` & `Button 1`
  Keys/Select State Slot 2 = `Button 8` & `Hat 0 S`
  Keys/Toggle 3D Side-by-side = `Button 8` & `Button 5`
  Keys/Take Screenshot = `Button 8` & `Button 4`
  Keys/Exit = `Button 8` & `Button 9`
  Keys/Select State Slot 1 = `Button 8` & `Hat 0 N`
  Keys/Load from selected slot = `Button 8` & `Button 2`
  Keys/Save to selected slot = `Button 8` & `Button 3`
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate[logger]
  '''
  [Logs]
  DVD = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'showFPS': True}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = True
  ShowFrameCount = True
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_api': 'Vulkan'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = Vulkan
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_dual_core': '0'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_dual_core': '1'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = True
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_enable_mmu': '0'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_enable_mmu': '1'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = True
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_gpu_sync': '0'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_gpu_sync': '1'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = True
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_osd_messages': '0'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_config[{'triforce_osd_messages': '1'}]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = False
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers[gcpadnew]
  '''
  [GCPad1]
  Device = SDL/0/Generic Xbox pad
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  D-Pad/Down = `Hat 0 S`
  Buttons/Hotkey = `Button 8`
  Main Stick/Left = `Axis 0-`
  Main Stick/Right = `Axis 0+`
  Main Stick/Up = `Axis 1-`
  Main Stick/Down = `Axis 1+`
  C-Stick/Left = `Axis 2-`
  C-Stick/Right = `Axis 2+`
  C-Stick/Up = `Axis 3-`
  C-Stick/Down = `Axis 3+`
  Triggers/L = `Button 6`
  D-Pad/Left = `Hat 0 W`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R = `Button 7`
  D-Pad/Right = `Hat 0 E`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Hat 0 N`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  [GCPad2]
  Device = SDL/1/Generic Xbox pad
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  D-Pad/Down = `Hat 0 S`
  Buttons/Hotkey = `Button 8`
  Main Stick/Left = `Axis 0-`
  Main Stick/Right = `Axis 0+`
  Main Stick/Up = `Axis 1-`
  Main Stick/Down = `Axis 1+`
  C-Stick/Left = `Axis 2-`
  C-Stick/Right = `Axis 2+`
  C-Stick/Up = `Axis 3-`
  C-Stick/Down = `Axis 3+`
  Triggers/L = `Button 6`
  D-Pad/Left = `Hat 0 W`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R = `Button 7`
  D-Pad/Right = `Hat 0 E`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Hat 0 N`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  [GCPad3]
  Device = SDL/0/Sony PLAYSTATION(R)3 Controller
  Buttons/B = `Button 1`
  Buttons/A = `Button 0`
  D-Pad/Down = `Button 14`
  Buttons/Hotkey = `Button 10`
  Main Stick/Left = `Axis 0-`
  Main Stick/Right = `Axis 0+`
  Main Stick/Up = `Axis 1-`
  Main Stick/Down = `Axis 1+`
  C-Stick/Left = `Axis 3-`
  C-Stick/Right = `Axis 3+`
  C-Stick/Up = `Axis 4-`
  C-Stick/Down = `Axis 4+`
  Triggers/L-Analog = `Full Axis 2+`
  D-Pad/Left = `Button 15`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R-Analog = `Full Axis 5+`
  D-Pad/Right = `Button 16`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Button 13`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers[hotkeys]
  '''
  [Hotkeys1]
  Device = SDL/0/Generic Xbox pad
  Keys/Reset = `Button 8` & `Button 0`
  Keys/Toggle Pause = `Button 8` & `Button 1`
  Keys/Select State Slot 2 = `Button 8` & `Hat 0 S`
  Keys/Toggle 3D Side-by-side = `Button 8` & `Button 5`
  Keys/Take Screenshot = `Button 8` & `Button 4`
  Keys/Exit = `Button 8` & `Button 9`
  Keys/Select State Slot 1 = `Button 8` & `Hat 0 N`
  Keys/Load from selected slot = `Button 8` & `Button 2`
  Keys/Save to selected slot = `Button 8` & `Button 3`
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers_hotkey_not_button[gcpadnew]
  '''
  [GCPad1]
  Device = SDL/0/GPIO Controller 2
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  Main Stick/Right = `Axis 1+`
  Buttons/Hotkey = ``
  Main Stick/Down = `Axis 0-`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Main Stick/Up = `Axis 0+`
  Buttons/X = `Button 6`
  Buttons/Start = `Button 7`
  Main Stick/Left = `Axis 1-`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers_hotkey_not_button[hotkeys]
  '''
  [Hotkeys1]
  Device = SDL/0/GPIO Controller 2
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers_keyboard[gcpadnew]
  '''
  [GCPad1]
  Device = SDL/0/Keyboard
  Main Stick/Left = ``
  Main Stick/Right = ``
  Main Stick/Down = ``
  Main Stick/Up = ``
  Buttons/B = ``
  Buttons/A = ``
  Triggers/R = ``
  Triggers/L = ``
  Buttons/X = ``
  Buttons/Start = ``
  Buttons/Y = ``
  Rumble/Motor = 
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers_keyboard[hotkeys]
  '''
  [Hotkeys1]
  Device = SDL/0/Keyboard
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers_rumble
  '''
  [GCPad1]
  Device = SDL/0/Generic Xbox pad
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  D-Pad/Down = `Hat 0 S`
  Buttons/Hotkey = `Button 8`
  Main Stick/Left = `Axis 0-`
  Main Stick/Right = `Axis 0+`
  Main Stick/Up = `Axis 1-`
  Main Stick/Down = `Axis 1+`
  C-Stick/Left = `Axis 2-`
  C-Stick/Right = `Axis 2+`
  C-Stick/Up = `Axis 3-`
  C-Stick/Down = `Axis 3+`
  Triggers/L = `Button 6`
  D-Pad/Left = `Hat 0 W`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R = `Button 7`
  D-Pad/Right = `Hat 0 E`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Hat 0 N`
  Buttons/Y = `Button 2`
  Rumble/Motor = Triangle
  [GCPad2]
  Device = SDL/1/Generic Xbox pad
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  D-Pad/Down = `Hat 0 S`
  Buttons/Hotkey = `Button 8`
  Main Stick/Left = `Axis 0-`
  Main Stick/Right = `Axis 0+`
  Main Stick/Up = `Axis 1-`
  Main Stick/Down = `Axis 1+`
  C-Stick/Left = `Axis 2-`
  C-Stick/Right = `Axis 2+`
  C-Stick/Up = `Axis 3-`
  C-Stick/Down = `Axis 3+`
  Triggers/L = `Button 6`
  D-Pad/Left = `Hat 0 W`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R = `Button 7`
  D-Pad/Right = `Hat 0 E`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Hat 0 N`
  Buttons/Y = `Button 2`
  Rumble/Motor = Triangle
  [GCPad3]
  Device = SDL/0/Sony PLAYSTATION(R)3 Controller
  Buttons/B = `Button 1`
  Buttons/A = `Button 0`
  D-Pad/Down = `Button 14`
  Buttons/Hotkey = `Button 10`
  Main Stick/Left = `Axis 0-`
  Main Stick/Right = `Axis 0+`
  Main Stick/Up = `Axis 1-`
  Main Stick/Down = `Axis 1+`
  C-Stick/Left = `Axis 3-`
  C-Stick/Right = `Axis 3+`
  C-Stick/Up = `Axis 4-`
  C-Stick/Down = `Axis 4+`
  Triggers/L-Analog = `Full Axis 2+`
  D-Pad/Left = `Button 15`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R-Analog = `Full Axis 5+`
  D-Pad/Right = `Button 16`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Button 13`
  Buttons/Y = `Button 2`
  Rumble/Motor = Triangle
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers_virtua_striker[gcpadnew]
  '''
  [GCPad1]
  Device = SDL/0/Generic Xbox pad
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  D-Pad/Down = `Hat 0 S`
  Buttons/Hotkey = `Button 8`
  Main Stick/Down = `Axis 0-`
  Main Stick/Up = `Axis 0+`
  Main Stick/Left = `Axis 1-`
  Main Stick/Right = `Axis 1+`
  C-Stick/Left = `Axis 2-`
  C-Stick/Right = `Axis 2+`
  C-Stick/Up = `Axis 3-`
  C-Stick/Down = `Axis 3+`
  Triggers/L = `Button 6`
  D-Pad/Left = `Hat 0 W`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R = `Button 7`
  D-Pad/Right = `Hat 0 E`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Hat 0 N`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  [GCPad2]
  Device = SDL/1/Generic Xbox pad
  Buttons/B = `Button 0`
  Buttons/A = `Button 1`
  D-Pad/Down = `Hat 0 S`
  Buttons/Hotkey = `Button 8`
  Main Stick/Down = `Axis 0-`
  Main Stick/Up = `Axis 0+`
  Main Stick/Left = `Axis 1-`
  Main Stick/Right = `Axis 1+`
  C-Stick/Left = `Axis 2-`
  C-Stick/Right = `Axis 2+`
  C-Stick/Up = `Axis 3-`
  C-Stick/Down = `Axis 3+`
  Triggers/L = `Button 6`
  D-Pad/Left = `Hat 0 W`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R = `Button 7`
  D-Pad/Right = `Hat 0 E`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Hat 0 N`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  [GCPad3]
  Device = SDL/0/Sony PLAYSTATION(R)3 Controller
  Buttons/B = `Button 1`
  Buttons/A = `Button 0`
  D-Pad/Down = `Button 14`
  Buttons/Hotkey = `Button 10`
  Main Stick/Down = `Axis 0-`
  Main Stick/Up = `Axis 0+`
  Main Stick/Left = `Axis 1-`
  Main Stick/Right = `Axis 1+`
  C-Stick/Left = `Axis 3-`
  C-Stick/Right = `Axis 3+`
  C-Stick/Up = `Axis 4-`
  C-Stick/Down = `Axis 4+`
  Triggers/L-Analog = `Full Axis 2+`
  D-Pad/Left = `Button 15`
  Triggers/R = `Button 5`
  Triggers/L = `Button 4`
  Triggers/R-Analog = `Full Axis 5+`
  D-Pad/Right = `Button 16`
  Buttons/X = `Button 8`
  Buttons/Start = `Button 9`
  D-Pad/Up = `Button 13`
  Buttons/Y = `Button 2`
  Rumble/Motor = 
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_controllers_virtua_striker[hotkeys]
  '''
  [Hotkeys1]
  Device = SDL/0/Generic Xbox pad
  Keys/Reset = `Button 8` & `Button 0`
  Keys/Toggle Pause = `Button 8` & `Button 1`
  Keys/Select State Slot 2 = `Button 8` & `Hat 0 S`
  Keys/Toggle 3D Side-by-side = `Button 8` & `Button 5`
  Keys/Take Screenshot = `Button 8` & `Button 4`
  Keys/Exit = `Button 8` & `Button 9`
  Keys/Select State Slot 1 = `Button 8` & `Hat 0 N`
  Keys/Load from selected slot = `Button 8` & `Button 2`
  Keys/Save to selected slot = `Button 8` & `Button 3`
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_existing[config]
  '''
  [General]
  ISOPath0 = /path/to/triforce
  ISOPaths = 1
  GCMPath0 = /path/to/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  EnableCheats = True
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  [Foo]
  Bar = 1
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_existing[gfx]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  [Foo]
  Bar = 1
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_existing[hotkeys]
  '''
  [Hotkeys1]
  Device = SDL/0/Generic Xbox pad
  Keys/Reset = `Button 8` & `Button 0`
  Keys/Toggle Pause = `Button 8` & `Button 1`
  Keys/Select State Slot 2 = `Button 8` & `Hat 0 S`
  Keys/Toggle 3D Side-by-side = `Button 8` & `Button 5`
  Keys/Take Screenshot = `Button 8` & `Button 4`
  Keys/Exit = `Button 8` & `Button 9`
  Keys/Select State Slot 1 = `Button 8` & `Hat 0 N`
  Keys/Load from selected slot = `Button 8` & `Button 2`
  Keys/Save to selected slot = `Button 8` & `Button 3`
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_existing[logger]
  '''
  [Logs]
  DVD = False
  
  [Foo]
  Bar = 1
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_antialiasing': '0x00000010/False'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000010
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_aspect_ratio': '1'}]
  '''
  [Settings]
  AspectRatio = 1
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_filtering': '1/2'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 1
  ForceTextureFiltering = 2
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_hires_textures': '0'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_hires_textures': '1'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = True
  CacheHiresTextures = True
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_perf_hacks': '0'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_perf_hacks': '1'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  BBoxEnable = False
  DeferEFBCopies = True
  EFBEmulateFormatChanges = False
  EFBScaledCopy = True
  EFBToTextureEnable = True
  SkipDuplicateXFBs = True
  XFBToTextureEnable = True
  
  [Enhancements]
  ForceFiltering = True
  ArbitraryMipmapDetection = True
  DisableCopyFilter = True
  ForceTrueColor = True
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_resampling': '1'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 1
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_resolution': '3'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 3
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_vsync': '0'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'triforce_vsync': '1'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'widescreen_hack': '0'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'widescreen_hack': '1', 'enable_cheats': '0'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = True
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'widescreen_hack': '1', 'enable_cheats': '1'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = False
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_gfx_config[{'widescreen_hack': '1'}]
  '''
  [Settings]
  AspectRatio = 0
  ShowFPS = False
  HiresTextures = False
  CacheHiresTextures = False
  wideScreenHack = True
  EFBScale = 2
  MSAA = 0x00000000
  SSAA = False
  
  [Hacks]
  
  [Enhancements]
  MaxAnisotropy = 0
  ForceTextureFiltering = 0
  OutputResampling = 0
  
  [Hardware]
  VSync = True
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_lang[de_DE]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 1
  GameCubeLanguage = 1
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_lang[en_US]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_lang[es_ES]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 3
  GameCubeLanguage = 3
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_lang[fr_FR]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 2
  GameCubeLanguage = 2
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_lang[it_IT]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 4
  GameCubeLanguage = 4
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_lang[nl_NL]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 5
  GameCubeLanguage = 5
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_generate_lang[pt_BR]
  '''
  [General]
  ISOPath0 = /userdata/roms/triforce
  ISOPaths = 1
  GCMPath0 = /userdata/roms/triforce
  GCMPathes = 1
  ShowLag = False
  ShowFrameCount = False
  
  [Core]
  MemcardAPath = /userdata/saves/dolphin-triforce/GC/MemoryCardA.USA.raw
  MemcardBPath = /userdata/saves/dolphin-triforce/GC/MemoryCardB.USA.raw
  EnableCheats = True
  CPUThread = False
  SyncGPU = False
  SelectedLanguage = 0
  GameCubeLanguage = 0
  MMU = False
  GFXBackend = OGL
  SerialPort1 = 6
  SIDevice0 = 11
  SIDevice1 = 11
  
  [Interface]
  UsePanicHandlers = False
  OnScreenDisplayMessages = True
  ConfirmStop = False
  
  [Analytics]
  PermissionAsked = True
  
  [Display]
  RenderToMain = False
  Fullscreen = False
  
  
  '''
# ---
# name: TestDolphinTriforceGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': list([
        'KEY_LEFTALT',
        'KEY_ENTER',
      ]),
      'restore_state': 'KEY_F1',
      'save_state': list([
        'KEY_LEFTSHIFT',
        'KEY_F1',
      ]),
    }),
    'name': 'dolphin-triforce',
  })
# ---
